Finished the layout

--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -3,7 +3,7 @@
         <!-- Footer -->
         <footer class="footer">
             <div class="container">
-
+                © MYFOLIO
             </div>
         </footer>
     </div>
