--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -28,6 +28,7 @@ $blue:     #037ffe;
 
 $primary:  #02918c;
 $secondary: #cfc91d;
+$yellow: #f0f0e8;
 
 $gray:     #7e8287;
 $gray-50:  color($gray, 50);
