--- a/src/styles/base/layout/footer.scss
+++ b/src/styles/base/layout/footer.scss
@@ -1,5 +1,8 @@
 @import '../../partials';
 
 .footer {
-
+    text-align: center;
+    color: $gray;
+    background: $black;
+    padding: 35px 0 25px 0;
 }
