--- a/src/includes/sections/about.html
+++ b/src/includes/sections/about.html
@@ -1,5 +1,5 @@
 <!-- About -->
-<section class="section section--about">
+<section class="section section--about" id="about">
     <div class="section__wrapper container">
         <div class="section__header section__header--center">
             <div class="section__title">
