--- a/src/styles/base/fonts.scss
+++ b/src/styles/base/fonts.scss
@@ -28,6 +28,6 @@
     }
 }
 
-@include font-face('OpenSans', '../fonts/OpenSans-Regular');
+@include font-face('OpenSans', '../fonts/OpenSans');
 @include font-face('OpenSans', '../fonts/OpenSans-Bold', $weight: 700);
 @include font-face('OpenSans', '../fonts/OpenSans-Extrabold', $weight: 900);
